// Format:
// Date (mm/dd/yr)
// rNumber [Author]
// 	* Modifications.
// 	- Details.
//========================================

01/24/2010
	r145 [pakpil]
	* Merged pc_isriding function from stable.
	* Minor fix in clif_addskill that was cause some problems with SC_REPRODUCE and RG_PLAGIARISM.
	* Fixed mounting dragons that was causing uses dragons skills without dragon.
	* Merged "warg_can_falcon" from trunk.

01/24/2010
	r144 [Jobbie]
	* Aimedbold and ArrowStorm should carry the weapon element.
	* Fixed no gemstone state when using Mistress card.
	* Fixed Enchant Blade should not target enemy.
	* Fixed White Imprison should not target non-enemy.

	r143 [pakpil]
	* Fixed WL_FROSTMISTY and WL_JACKFROST that aren't working propertly.
	- Bug report 81.

01/23/2010
	r142 [Jobbie]
	* ArchBishop Update:
	- Fixed damage calculation of Adoramus and Judex. Judex should have a sub hits of 3.
	- Redone Clementia, Canto, Praefatio, and Coloceo Heal to display only skill name above the head.
	- Ancilla and Epiclesis used now its official fail message.
	* Ranger Update:
	- Added RA_SENSITIVEKEEN skill.
	- Fixed Camouflage not displaying skill name above the head.
	- Fixed Electricshocker and Wugbite status which should be reduced by 1sec every 10 agi.
	- Fixed when mounting a warg item skills cannot be used.
	- Aimedbolt and Arrowstorm can be used without a bow.
	* Cleaned up some whitespace.
	* Fixed some map_freeblock error caused by some skills.

	r141 [Rytech]
	* Fixed max level to allow up to level 1000 for trunk.

	r140 [pakpil]
	* Fixed SC_GROOMY that wasn't removed mounts.
	* Fixed SC_MANHOLE that was allowing attack while was under this sc.

	r138 [pakpil]
	* Added WM_REVERBERATION and WM_DOMINION_IMPULSE skills.
	* Minor fix in SC_AUTOSHADOWSPELL that cause you can't move if you haven't copied skills.
	* Minor fix in the new clif_skillcasting packet.

01/22/2010
	r135 [pakpil]
	* Added WM_LULLABY_DEEPSLEEP skill working as intended.