@@ -368,7 +368,6 @@ enum {
 	ST_HIDDEN,
 	ST_RIDING,
 	ST_FALCON,
-	ST_RIDINGMADO,
 	ST_CART,
 	ST_SHIELD,
 	ST_SIGHT,
@@ -380,6 +379,7 @@ enum {
 	ST_RIDINGDRAGON,
 	ST_WUG = 16,
 	ST_RIDINGWUG,
+	ST_MADO,
 	//ST_WEAPONBLOCKING,
 	//ST_POISONINGWEAPON,
 	//ST_ROLLINGCUTTER,
