@@ -360,6 +360,9 @@ typedef enum sc_type {
 	SC_WUGDASH,
 	SC_CAMOUFLAGE,
 
+	SC_ACCELERATION,
+	SC_INFRAREDSCAN,
+
 	SC__ENERVATION,
 	SC__GROOMY,
 	SC__IGNORANCE,
